--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             <p>
                 During my undergrad study I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
         <p> I have a track record of contributing to CNN efficient inference. 
-            I designed <a href="#cp">channel pruning</a> to effectively prune channels. 
+            Particularly, I designed <a href="#cp">channel pruning</a> to effectively prune channels. 
             I further proposed <a href="#AMC">AMC</a>, 
-            which employed reinforcement learning to efficiently sample the design space and greatly improved the model compression quality.</p>
+            which employed reinforcement learning to efficiently sample the design space of channel pruning and greatly improved the model compression quality.</p>
                 <p><strong>Looking for 2019 summer internship. </strong> Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/cv-yihui/blob/master/cv_yihui.pdf">CV</a>.
             </p>
