--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 I'm a CMU grad student, with my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                During my undergrad study I've interned at MIT, JHU and Megvii(Face++)</a> supervised by <a target="_blank" href="http://jiansun.org/">Jian Sun</a>. I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
+                During my undergrad study I was fortunate to be an intern with <a target="_blank" href="http://jiansun.org/">Jian Sun</a>(Megvii/Face++), <a target="_blank" href="https://stanford.edu/~songhan/">Song Han</a>(MIT) and <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>(JHU). 
+                I've served as a reviewer for TIP (IEEE Transactions on Image Processing). </p>
         <p> I have a track record of contributing to CNN efficient inference. 
             Particularly, I designed <a href="#cp">channel pruning</a> to effectively prune channels. 
             I further proposed <a href="#AMC">AMC</a>, 
