--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                            href="http://openaccess.thecvf.com/content_ECCV_2018/html/Yihui_He_AMC_Automated_Model_ECCV_2018_paper.html">[PDF]</a>  
                          <a target="_blank"
                            href="https://arxiv.org/abs/1802.03494">[arXiv]</a>  
+                        <a target="_blank"
+                           href="https://www.jiqizhixin.com/articles/AutoML-for-Model-Compression-and-Acceleration-on-Mobile-Devices">[News]</a>  
+                        
                         
                     </p>
                     <p class="abstract-text">
