--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                 I'm a CMU grad student, with my interest focus on Computer Vision, Deep Learning and Network Security. 
             </p>
             <p>
-                During my undergrad study I was fortunate to be an intern with <a target="_blank" href="http://jiansun.org/">Jian Sun</a> (Megvii/Face++), <a target="_blank" href="http://songhan.mit.edu">Song Han</a> (MIT) and <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a> (JHU). </p>
-        <p> I have a track record of contributing to CNN efficient inference. 
+                During my undergrad study I was fortunate to be an intern with <a target="_blank" href="http://jiansun.org/">Jian Sun</a> (Megvii/Face++), <a target="_blank" href="http://songhan.mit.edu">Song Han</a> (MIT) and <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a> (JHU). I have a track record of contributing to CNN efficient inference. 
             Particularly, I designed <a href="#cp">channel pruning</a> to effectively prune channels. 
             I further proposed <a href="#AMC">AMC</a> to sample the design space of channel pruning via reinforcement learning, which greatly improved the performance.
-            I served as a reviewer for CVPR'19, NIPS'18 and TIP. </p>
+             </p>  
+            <p>I served as a reviewer for CVPR'19, ICLR'19, NIPS'18 and TIP. </p>
 
             <!--
              *** Research ***
