--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
                  href="https://github.com/yihui-he">GitHub</a>
             / <a target="_blank"
                  href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
-            / <mark><strong>Looking for 2019 summer internship </strong></mark>
             </h5>
             <!-- Do I want to show a pic on the phone screen?
             <div class="text-center visible-phone">
@@ -146,12 +145,13 @@
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                             Shift-based Primitives for Efficient Convolutional Neural Networks
+                             AddressNet: Shift-based Primitives for Efficient Convolutional Neural Networks
                      </strong><br>
                             <strong>Yihui He*</strong>, Xianggen Liu*, Huasong Zhong* and Yuchun Ma, <strong>WACV 2019</strong>
                         <a target="_blank"
                            href="https://arxiv.org/pdf/1809.08458.pdf">[arXiv]</a>  
-                        
+                        <a target="_blank"
+                           href="https://www.youtube.com/watch?v=2Abi_razAXI">[presentation]</a>  
                         
                     </p>
                     <p class="abstract-text">
