--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                            href="https://arxiv.org/pdf/1809.08458.pdf">[arXiv]</a>  
                         <a target="_blank"
                            href="https://www.youtube.com/watch?v=2Abi_razAXI">[presentation]</a>  
-                        
+                        <a target="_blank"
+                           href="https://raw.githubusercontent.com/yihui-he/yihui-he.github.io/master/assets/WACV19-poster.png">[poster]</a> 
                     </p>
                     <p class="abstract-text">
                        We propose a collection of three shift-based primitives for building efficient compact CNN-based networks. These three primitives (channel shift, address shift, shortcut shift) can reduce the inference time on GPU while maintains the prediction accuracy. These shift-based primitives only moves the pointer but avoids memory copy, thus very fast.
