--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <a name="publications"></a> Publications
             </h3>
                               <div class="media">
-                <a name="softer" class="pull-left">
-                    <img class="media-object" src="https://ai2-s2-public.s3.amazonaws.com/figures/2017-08-08/791e7e83d86ef0f28a60ec6eb61dbc784d0300f4/7-Figure8-1.png" width="96px" height="96px">
+                <a name="pts" class="pull-left">
+                    <img class="media-object" src="./assets/pts.png" width="96px" height="96px">
                 </a>
                 <div class="media-body">
                     <p class="media-heading">
@@ -137,7 +137,7 @@
                 </div>
             </div>
                   <div class="media">
-                <a name="softer" class="pull-left">
+                <a name="fsaf" class="pull-left">
                     <img class="media-object" src="https://ai2-s2-public.s3.amazonaws.com/figures/2017-08-08/791e7e83d86ef0f28a60ec6eb61dbc784d0300f4/7-Figure8-1.png" width="96px" height="96px">
                 </a>
                 <div class="media-body">
