--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                  href="https://github.com/yihui-he">GitHub</a>
             / <a target="_blank"
                  href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
+            / <mark>actively looking for full-time / PhD position</mark>
             </h5>
             <!-- Do I want to show a pic on the phone screen?
             <div class="text-center visible-phone">
@@ -85,6 +86,8 @@
             </a>
             <p>
                 I'm a CMU master student, with my interest focus on Computer Vision and Deep Learning. 
+                Currently, I'm interning at Facebook AI Research mentored by <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Priya Goyal</a> and <a target="_blank" href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. 
+                At CMU, I focus on improving both <a href="#fsaf">one-stage</a>/<a href="#softer">two-stage</a> object detectors and hand pose estimation.
             </p>
             <p>
                 During my undergrad study I was fortunate to be an intern with <a target="_blank" href="http://jiansun.org/">Jian Sun</a> (Megvii/Face++), <a target="_blank" href="http://songhan.mit.edu">Song Han</a> (MIT) and <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a> (JHU). I have a track record of contributing to CNN efficient inference. 
