--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
                         <a target="_blank"
                            href="https://arxiv.org/abs/1809.08545">[arXiv]</a>  
                         <a target="_blank"
+                           href="https://www.youtube.com/watch?v=bcGtNdTzdkc">[presentation]</a>                          
+                        <a target="_blank"
                            href="https://github.com/yihui-he/KL-Loss">[code]</a>  
                         
                         
