--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                  href="https://github.com/yihui-he">GitHub</a>
             / <a target="_blank"
                  href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
-            / <mark>actively looking for full-time / PhD position</mark>
+            / <mark>actively looking for PhD position</mark>
             </h5>
             <!-- Do I want to show a pic on the phone screen?
             <div class="text-center visible-phone">
@@ -86,15 +86,14 @@
             </a>
             <p>
                 I'm a CMU master student, with my interest focus on Computer Vision and Deep Learning. 
-                Currently, I'm interning at Facebook AI Research mentored by <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Priya Goyal</a> and <a target="_blank" href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. 
-                At CMU, I focus on improving both <a href="#fsaf">one-stage</a>/<a href="#softer">two-stage</a> object detectors and hand pose estimation.
+                At CMU, my capstone project is on multi-view pose estimation, with professor <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Katerina Fragkiadaki</a>. I interned at Facebook AI Research mentored by <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Priya Goyal</a> and <a target="_blank" href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>.      
             </p>
             <p>
                 During my undergrad study I was fortunate to be an intern with <a target="_blank" href="http://jiansun.org/">Jian Sun</a> (Megvii/Face++), <a target="_blank" href="http://songhan.mit.edu">Song Han</a> (MIT) and <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a> (JHU). I have a track record of contributing to CNN efficient inference. 
             Particularly, I designed <a href="#cp">channel pruning</a> to effectively prune channels. 
             I further proposed <a href="#AMC">AMC</a> to sample the design space of channel pruning via reinforcement learning, which greatly improved the performance.
              </p>  
-            <p>I served as a reviewer for ICCV'19, CVPR'19, ICLR'19, NIPS'18, TIP and IJCV. </p>
+            <p>I served as a reviewer for CVPR'20, ICLR'20, ICCV'19, CVPR'19, ICLR'19, NIPS'18, Pattern Recognition Letters, TIP and IJCV. </p>
 
             <!--
              *** Research ***
@@ -131,8 +130,6 @@
                         Jianren Wang, <strong>Yihui He</strong>, Xiaobo Wang, Xinjia Yu, Xia Chen
                         <a target="_blank"
                            href="https://arxiv.org/abs/1904.03280">[arXiv]</a>
-                        
-                        
                     </p>
                     <p class="abstract-text">
                         We motivate and present feature selective anchor-free(FSAF) module, a simple and effective building block forsingle-shot object detectors. It can be plugged into single-shot detectors with feature pyramid structure. The FSAF module addresses two limitations brought up by the conventional anchor-based detection: 1) heuristic-guided feature selection; 2) overlap-based anchor sampling. 
