--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 At CMU, my capstone project is on multi-view pose estimation, with professor <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Katerina Fragkiadaki</a>. I interned at Facebook AI Research mentored by <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Priya Goyal</a> and <a target="_blank" href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>.      
             </p>
             <p>
-                During my undergrad study I was fortunate to be an intern with <a target="_blank" href="http://jiansun.org/">Jian Sun</a> (Megvii/Face++), <a target="_blank" href="http://songhan.mit.edu">Song Han</a> (MIT) and <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a> (JHU). I have a track record of contributing to CNN efficient inference. 
+                I have a track record of contributing to CNN efficient inference during my undergrad study. 
             Particularly, I designed <a href="#cp">channel pruning</a> to effectively prune channels. 
             I further proposed <a href="#AMC">AMC</a> to sample the design space of channel pruning via reinforcement learning, which greatly improved the performance.
              </p>  
-            <p>I served as a reviewer for CVPR'20, ICLR'20, ICCV'19, CVPR'19, ICLR'19, NIPS'18, Pattern Recognition Letters, TIP and IJCV. </p>
+            <p>I served as a reviewer for ECCV'20, ICML'20, CVPR'20, ICLR'20, ICCV'19, CVPR'19, ICLR'19, NIPS'18, Pattern Recognition Letters, TIP and IJCV. </p>
 
             <!--
              *** Research ***
@@ -118,7 +118,8 @@
             <h3>
                 <a name="publications"></a> Publications
             </h3>
-                              <div class="media">
+            <!--
+            <div class="media">
                 <a name="pts" class="pull-left">
                     <img class="media-object" src="./assets/pts.png" width="96px" height="96px">
                 </a>
@@ -136,6 +137,7 @@
                     </p>
                 </div>
             </div>
+-->
                   <div class="media">
                 <a name="fsaf" class="pull-left">
                     <img class="media-object" src="https://ai2-s2-public.s3.amazonaws.com/figures/2017-08-08/791e7e83d86ef0f28a60ec6eb61dbc784d0300f4/7-Figure8-1.png" width="96px" height="96px">
