--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </a>
             <p>
                 I'm a CMU master student, with my interest focus on Computer Vision and Deep Learning. 
-                At CMU, my capstone project is on multi-view pose estimation, with professor <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Katerina Fragkiadaki</a>. I interned at Facebook AI Research mentored by <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Priya Goyal</a> and <a target="_blank" href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>.      
+                At CMU, my capstone project is on multi-view pose estimation, with professor <a target="_blank" href="https://www.cs.cmu.edu/~katef/">Katerina Fragkiadaki</a>. I interned at Facebook AI Research mentored by <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Priya Goyal</a> and <a target="_blank" href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>.      
             </p>
             <p>
                 I have a track record of contributing to CNN efficient inference during my undergrad study. 
