--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                  href="https://github.com/yihui-he">GitHub</a>
             / <a target="_blank"
                  href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
-            / <mark>actively looking for PhD position</mark>
+            / <mark>actively looking for job</mark>
             </h5>
             <!-- Do I want to show a pic on the phone screen?
             <div class="text-center visible-phone">
