--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                 <img class="media-object" src="assets_files/me.png" width="96px" style="margin: 0px 10px">
             </a>
             <p>
-                I'm a CMU master student, with my interest focus on Computer Vision and Deep Learning. 
+                I'm a research engineer at Facebook AI Research, Pittsburgh. 
+            </p>
+            <p>
+                I got master's degree from CMU , with my interest focus on Computer Vision and Deep Learning. 
                 At CMU, my capstone project is on multi-view pose estimation, with professor <a target="_blank" href="https://www.cs.cmu.edu/~katef/">Katerina Fragkiadaki</a>. I interned at Facebook AI Research mentored by <a target="_blank" href="https://research.fb.com/people/goyal-priya/">Priya Goyal</a> and <a target="_blank" href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>.      
             </p>
             <p>
