--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!-- <!DOCTYPE html> -->
 <html lang="en">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4253216309174736"
+     crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Yihui He, CMU grad student focused on Computer vision & Deep Learning</title>
 
@@ -85,7 +87,7 @@
                 <img class="media-object" src="assets_files/me.png" width="96px" style="margin: 0px 10px">
             </a>
             <p>
-                I'm a research engineer at Facebook AI Research, Pittsburgh. 
+                I'm a research engineer at <a target="_blank" href="https://www.goheadroom.com">Headroom</a>. Before that, I was a research engineer at Facebook AI Research. 
             </p>
             <p>
                 I got master's degree from CMU , with my interest focus on Computer Vision and Deep Learning. 
