--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <li><a href="#publications">Publications</a></li>
             <li><a href="#projects">Projects</a></li>
             <!--<li><a href="#teaching">Teaching</a></li>-->
-            <li><a target="_blank"
+<!--             <li><a target="_blank"
                    href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
-            </li>
+            </li> -->
         </ul>
         <hr class="hidden-phone">
         <div class="text-center hidden-phone">
@@ -71,11 +71,15 @@
             <h5>
                 yihuihe.yh AT gmail DOT com
             / <a target="_blank"
-                 href="https://scholar.google.com/citations?user=2yAMJ1YAAAAJ&hl=en">Google Scholar</a>
-            / <a target="_blank" 
-                 href="https://github.com/yihui-he">GitHub</a>
+                 href="https://twitter.com/he_yi_hui">twitter@he_yi_hui</a>
             / <a target="_blank"
-                 href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
+                 href="https://www.youtube.com/channel/UCuxl5K1MSj1TTtAsNmlONcg">YouTube</a>
+            / <a target="_blank" 
+                 href="https://github.com/yihui-he">GitHub (1.7k followers)</a>
+            / <a target="_blank"
+                 href="https://www.zhihu.com/people/rex686568">Zhihu (8k followers</a>
+<!--             / <a target="_blank"
+                 href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a> -->
 <!--             / <mark>actively looking for job</mark> -->
             </h5>
             <!-- Do I want to show a pic on the phone screen?
@@ -121,7 +125,8 @@
              *** Publications ***
             -->
             <h3>
-                <a name="publications"></a> Publications
+                <a name="publications"></a> <a target="_blank"
+                 href="https://scholar.google.com/citations?user=2yAMJ1YAAAAJ&hl=en">check => Google Scholar for latest</a>
             </h3>
             <!--
             <div class="media">
