--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4253216309174736"
       crossorigin="anonymous"
     ></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4TMBBH2RZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y4TMBBH2RZ');
+</script>
+    
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>
       Yihui He, CMU grad student focused on Computer vision & Deep Learning
