--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     />
     <title>Yihui He</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" href="assets/icon.png" />
   </head>
 
   <body>
@@ -498,6 +499,21 @@
 
     <div id="pet-projects" class="container">
       <div class="ctitle">Featured projects</div>
+      <div class="hassets" style="height: 191px; margin: 20px 0 10px 0">
+        <div class="hasset" style="top: 0; left: 0; width: 50%">
+            <div style="position:relative;">
+                <iframe src="https://github-readme-stats.vercel.app/api?username=yihui-he&count_private=true&show_icons=true&card_width=1000" width="100%" height="191px"></iframe>
+                <a href="https://github.com/yihui-he" style="position:absolute; top:0; left:0; display:inline-block; width:100%; height:191px; z-index:5;"></a>
+                </div>
+        </div>
+
+        <div class="hasset" style="top: 0; left: 50%; width: 50%">
+            <div style="position:relative;">
+                <div class="iframely-embed"><div class="iframely-responsive" style="height: 140px; padding-bottom: 0;"><a href="https://scholar.google.com/citations?user=2yAMJ1YAAAAJ&hl=en" data-iframely-url="//cdn.iframe.ly/api/iframe?url=https%3A%2F%2Fscholar.google.com%2Fcitations%3Fuser%3D2yAMJ1YAAAAJ%26hl%3Den&key=c5e783917e8588d115fbe49622e81057"></a></div></div><script async src="//cdn.iframe.ly/embed.js" charset="utf-8"></script>
+                <a href="https://scholar.google.com/citations?user=2yAMJ1YAAAAJ&hl=en" style="position:absolute; top:0; left:0; display:inline-block; width:100%; height:100%; z-index:5;"></a>
+                </div>
+        </div>
+      </div>
 
       <div class="project">
         <div class="pico">
