--- a/index.html
+++ b/index.html
@@ -790,6 +790,21 @@
     </div> -->
 
     <div class="container">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4253216309174736"
+       crossorigin="anonymous"></script>
+  <!-- horizontal -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-4253216309174736"
+       data-ad-slot="7122035878"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+    </div>
+
+    <div class="container">
       <div class="ctitle">misc unsorted</div>
       <ul style="padding-left: 10px">
         <li>
@@ -804,6 +819,21 @@
       >skiing</a
     ></li>
       </ul>
+    </div>
+
+    <div class="container">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4253216309174736"
+       crossorigin="anonymous"></script>
+  <!-- horizontal -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-4253216309174736"
+       data-ad-slot="7122035878"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
     </div>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
