--- a/index.html
+++ b/index.html
@@ -38,26 +38,28 @@
           <h1>Yihui He</h1>
           <h2>full stack AI research engineer🧠🤖</h2>
           <div id="dico">
-            yihuihe.yh AT gmail.com <br />
             <a  href="https://twitter.com/he_yi_hui">Twitter</a>
+            /
+            <a  href="https://yihui-he.github.io/blog/">Blog</a>
             /
             <a
               
               href="https://www.youtube.com/channel/UCuxl5K1MSj1TTtAsNmlONcg"
               >YouTube</a
             >
-            /
-            <a  href="https://github.com/yihui-he"
-              >GitHub (2k followers)</a
-            >
+            
             /
             <a  href="https://www.zhihu.com/people/rex686568"
               >知乎 (8k 关注)</a
             >
             <br />
+            <a  href="https://github.com/yihui-he"
+              >GitHub (2k followers)</a
+            > / 
             <a  href="https://www.zhihu.com/people/rex686568"
               >Google Scholar (3k citations)</a
-            >
+            ><br />
+            gmail: yihuihe.yh 
           </div>
           <div id="demail"></div>
           <!-- will reveal email -->
