--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       gtag("config", "G-Y4TMBBH2RZ");
     </script>
 
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9102894433178942"
+      crossorigin="anonymous"
+    ></script>
     <meta name="propeller" content="96019d0abca680743d18c82104dc17e7" />
     <script>
       (function (s, u, z, p) {
