--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9102894433178942"
       crossorigin="anonymous"
     ></script>
-    <meta name="propeller" content="96019d0abca680743d18c82104dc17e7" />
+    <!-- <meta name="propeller" content="96019d0abca680743d18c82104dc17e7" />
     <script>
       (function (s, u, z, p) {
         (s.src = u), s.setAttribute("data-zone", z), p.appendChild(s);
@@ -31,7 +31,7 @@
         4919846,
         document.body || document.documentElement
       );
-    </script>
+    </script> -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
