--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       gtag("config", "G-Y4TMBBH2RZ");
     </script>
 
-    <script
+    <!-- <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9102894433178942"
       crossorigin="anonymous"
-    ></script>
-    <!-- <meta name="propeller" content="96019d0abca680743d18c82104dc17e7" />
+    ></script> -->
+    <meta name="propeller" content="96019d0abca680743d18c82104dc17e7" />
     <script>
       (function (s, u, z, p) {
         (s.src = u), s.setAttribute("data-zone", z), p.appendChild(s);
@@ -31,7 +31,7 @@
         4919846,
         document.body || document.documentElement
       );
-    </script> -->
+    </script>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -65,7 +65,7 @@
             <a href="https://www.zhihu.com/people/rex686568">知乎 (8k 关注)</a>
             <br />
             <a href="https://github.com/yihui-he">GitHub (2k followers)</a> /
-            <a href="https://www.zhihu.com/people/rex686568"
+            <a href="https://scholar.google.com/citations?user=2yAMJ1YAAAAJ"
               >Google Scholar (3k citations)</a
             ><br />
             gmail: yihuihe.yh
