--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a href="https://scholar.google.com/citations?user=2yAMJ1YAAAAJ"
               >Google Scholar (3k citations)</a
             ><br />
-            gmail: yihuihe.yh
+            email: lastname@firstname.dev
           </div>
           <div id="demail"></div>
           <!-- will reveal email -->
