--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       gtag("config", "G-Y4TMBBH2RZ");
     </script>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3067423965841029"
-     crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3067423965841029"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- <meta name="propeller" content="96019d0abca680743d18c82104dc17e7" />
     <script>
@@ -49,7 +52,7 @@
         </div>
         <div id="ddesc">
           <h1>Yihui He</h1>
-          <h2>full stack AI research engineer🧠🤖</h2>
+          <h2>AI scientist / full stack engineer🧠🤖</h2>
           <div id="dico">
             <a href="https://twitter.com/he_yi_hui">Twitter</a>
             /
@@ -826,13 +829,13 @@
     <div class="container">
       <div class="ctitle">misc unsorted</div>
       <ul style="padding-left: 10px">
-        <li>
+        <!-- <li>
           A
           <a href="https://space.bilibili.com/2021626147"
             >fully automated content creator</a
           >
           of movie clips and movie summaries
-        </li>
+        </li> -->
         <li>
           I like
           <a href="https://www.youtube.com/watch?v=cUmGmobrfA4">climbing</a> and
