--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
           <h1>Yihui He</h1>
           <h2>AI scientist / full stack engineer🧠🤖</h2>
           <div id="dico">
+            <a href="https://www.linkedin.com/in/heyihui/">LinkedIn</a>
+            /
             <a href="https://twitter.com/he_yi_hui">Twitter</a>
             /
             <a href="https://yihui-he.github.io/blog/">Blog</a>
@@ -195,7 +197,7 @@
           <img src="assets_files/facebook.png" />
         </div>
         <div class="desc">
-          I was a research enginear at
+          I was a senior research enginear at
           <a href="https://ai.facebook.com/">Facebook AI Research</a>, where I
           worked on large scale video self-supervised learning,
           <a
