--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <a href="https://scholar.google.com/citations?user=2yAMJ1YAAAAJ"
               >Google Scholar (3k citations)</a
             ><br />
-            email: lastname@firstname.dev
+            email: yihuihe.yh AT gmail
           </div>
           <div id="demail"></div>
           <!-- will reveal email -->
